qbs (1.4.1+dfsg-4) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Add missing includes for kinfo_getproc(3) on kFreeBSD
    (bsd_includes.diff).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 12 Jul 2015 16:31:57 +0300

qbs (1.4.1+dfsg-3) experimental; urgency=medium

  * Backport upstream change to run testAssembly only on architectures
    where it is supported (fix_assembly_test.diff).
  * Replace revert_tests_speedup.diff with proposed upstream version
    by Christian Kandeler.
  * Disable moc-hpp-included test which currently fails because of a bug
    in QtScript on some architectures (disable_moc_hpp_included.diff).
  * Update some URLs to use *.qt.io instead of *.qt-project.org.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 11 Jul 2015 19:57:05 +0300

qbs (1.4.1+dfsg-2) experimental; urgency=medium

  * Version all symbols from 1.4 snapshots as 1.4.0.
  * Revert upstream commit that may have caused tests to fail.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 08 Jul 2015 14:00:20 +0300

qbs (1.4.1+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Update debian/watch for new tarball naming scheme.
  * Refresh debian/patches/skip_test.diff.
  * Install new tools/commandechomode.h header in qbs-dev.
  * Update debian/libqbscore1.symbols for the new version.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 06 Jul 2015 17:33:05 +0300

qbs (1.4~git20150407-c224c8-1) experimental; urgency=medium

  * New upstream snapshot.
  * Fix a typo in previous changelog entry.
  * Sort debian/qbs.install.
  * Clean up patches and bump Last-Update timestamps.
  * Update name of qbs_disable_rpath variable, following upstream
    change (commit a8e6324de460745a).
  * Update libqbscore1.symbols for the new snapshot.
  * Properly version symbols introduced in previous upload.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 10 Apr 2015 09:33:46 +0300

qbs (1.4~7fd456-1) experimental; urgency=medium

  [ Dmitry Shachnev ]