@@ -1,4 +1,4 @@
-Description: remove a test that fails because of QtScript bug
+Description: remove some tests that fail because of QtScript bugs
  The stacktrace is (obtained on ppc64el):
    #0  SLL_PopRange (end=<synthetic pointer>, start=<synthetic pointer>, N=<optimized out>, head=0x3fffb32004e0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:742
    #1  PopRange (end=<synthetic pointer>, start=<synthetic pointer>, N=<optimized out>, this=0x3fffb32004e0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2083
@@ -9,11 +9,15 @@ Description: remove a test that fails because of QtScript bug
    #6  0x00003fffb6a489b8 in start_thread (arg=0x3fffb441f160) at pthread_create.c:322
    #7  0x00003fffb745f870 in clone () at ../sysdeps/unix/sysv/linux/powerpc/powerpc64/clone.S:104
  .
- QBS is going to be ported away from QtScript, but in the mean time remove this test
- so it does not block the build.
+ QBS is going to be ported away from QtScript, but in the mean time remove
+ some tests to make the build pass.
+ .
+ Currently disabled tests:
+   moc-hpp-included (fails on powerpc, ppc64el, mipsel)
+   infinite-loop-js (fails on powerpc)
 Author: Dmitry Shachnev <mitya57@debian.org>
 Forwarded: not-needed
-Last-Update: 2015-07-11
+Last-Update: 2015-07-12
 
 --- a/tests/auto/api/tst_api.cpp
 +++ b/tests/auto/api/tst_api.cpp
@@ -27,3 +31,11 @@ Last-Update: 2015-07-11
      QTest::newRow("app and lib with same source file")
              << QString("lib-same-source")
              << relativeExecutableFilePath("HelloWorldApp");
+@@ -951,7 +948,6 @@
+ void TestApi::infiniteLoopBuilding_data()
+ {
+     QTest::addColumn<QString>("projectDirName");
+-    QTest::newRow("JS Command") << QString("infinite-loop-js");
+     QTest::newRow("Process Command") << QString("infinite-loop-process");
+ }
+ 
