@@ -3,6 +3,9 @@ qbs (1.4.1+dfsg-4) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * Add missing includes for kinfo_getproc(3) on kFreeBSD
     (bsd_includes.diff).
+  * Disable one more test (infinite-loop-js) failing because of QtScript
+    bugs to make the build pass on powerpc. Rename the patch from
+    disable_moc_hpp_included.diff to disable_tests_qtscript.diff.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 12 Jul 2015 16:31:57 +0300
 
